--- a/Lab5/Iris.ipynb
+++ b/Lab5/Iris.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 26,
    "id": "1bc777ce",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
+   "id": "f6095cd7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "4c2a8896",
    "metadata": {},
    "outputs": [],
@@ -23,8 +31,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5e870d7e",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 28,
    "id": "9c08381f",
    "metadata": {},
    "outputs": [],
@@ -35,17 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 29,
    "id": "a5da4a89",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path=\"/home/deepakchalla/Desktop/ML_Lab/Lab5/Iris.csv\""
+    "path=\"Iris.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 30,
    "id": "89f514c1",
    "metadata": {},
    "outputs": [
@@ -188,7 +202,7 @@
        "[150 rows x 5 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 31,
    "id": "7deb0a90",
    "metadata": {},
    "outputs": [
@@ -230,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 32,
    "id": "20e4532d",
    "metadata": {},
    "outputs": [],
@@ -248,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 33,
    "id": "085b0026",
    "metadata": {},
    "outputs": [],
@@ -258,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 34,
    "id": "0bf7fb5e",
    "metadata": {},
    "outputs": [],
@@ -274,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 35,
    "id": "e1a20172",
    "metadata": {},
    "outputs": [],
@@ -288,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 36,
    "id": "530a352b",
    "metadata": {},
    "outputs": [],
@@ -316,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 37,
    "id": "8a035a83",
    "metadata": {},
    "outputs": [],
@@ -333,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 38,
    "id": "1624cb72",
    "metadata": {},
    "outputs": [],
@@ -367,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 39,
    "id": "ccf2040b",
    "metadata": {},
    "outputs": [],
@@ -377,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 40,
    "id": "28f0ae7f",
    "metadata": {},
    "outputs": [],
@@ -395,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 41,
    "id": "e3bcdf8c",
    "metadata": {},
    "outputs": [],
@@ -412,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 42,
    "id": "49f4f8cc",
    "metadata": {},
    "outputs": [],
@@ -423,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 43,
    "id": "8d86f360",
    "metadata": {},
    "outputs": [],
@@ -432,7 +446,7 @@
     "#Replication\n",
     "models_replication=[]\n",
     "for i in range(3):\n",
-    "  path=f\"/home/deepakchalla/Desktop/ML_Lab/Lab5/iris_class_{i}.csv\"\n",
+    "  path=f\"iris_class_{i}.csv\"\n",
     "  data=pd.read_csv(path)\n",
     "  data=replicate_data(data)\n",
     "  train,val,test=create_split(data)\n",
@@ -448,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 45,
    "id": "d20a75ef",
    "metadata": {},
    "outputs": [],
@@ -457,7 +471,7 @@
     "#SMOTE\n",
     "models_smote=[]\n",
     "for i in range(3):\n",
-    "  path=f\"/home/deepakchalla/Desktop/ML_Lab/Lab5/iris_class_{i}.csv\"\n",
+    "  path=f\"iris_class_{i}.csv\"\n",
     "  data=pd.read_csv(path)\n",
     "  data=SMOTE(data)\n",
     "  train,val,test=create_split(data)\n",
@@ -473,14 +487,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 46,
    "id": "3498509f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Accuracy of Data set\n",
     "y_lables=[]\n",
-    "df=pd.read_csv(\"/home/deepakchalla/Desktop/ML_Lab/Lab5/Iris.csv\")\n",
+    "df=pd.read_csv(\"Iris.csv\")\n",
     "for data in df['Species']:\n",
     "  for i in range(3):\n",
     "    if data==classes[i]:\n",
@@ -490,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 47,
    "id": "921f92c4",
    "metadata": {},
    "outputs": [],
@@ -503,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 48,
    "id": "401be420",
    "metadata": {},
    "outputs": [],
@@ -525,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 49,
    "id": "fc0967de",
    "metadata": {},
    "outputs": [
@@ -548,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 50,
    "id": "cc28fc92",
    "metadata": {},
    "outputs": [],
@@ -570,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 51,
    "id": "e27d38e6",
    "metadata": {},
    "outputs": [
@@ -578,7 +592,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "90.0\n"
+      "92.0\n"
      ]
     }
    ],
@@ -608,7 +622,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
